# CloudTopSDK

./: .gitignore  CloudTopBuilder.py  Jenkinsfile  Makefile  README.md  requirements.txt  setup.cfg
apps/chip690/: pgadmin-cloudtop.yml
apps/gnu-octave/: Dockerfile  Jenkinsfile  Makefile  README  gnu-octave.sh  gnu-octave.yml
apps/gnu-octave/desktop/: gnu-octave.desktop
apps/gnu-octave/init.d/: 50-desktop-init.sh
apps/image-analyses/: Dockerfile  Jenkinsfile  Makefile  image-analyses.yml  python.sh
apps/image-analyses/desktop/: napari.desktop
apps/image-analyses/init.d/: 50-desktop-init.sh
apps/imagej/: Dockerfile  Jenkinsfile  Makefile  imagej.sh  imagej.yml
apps/imagej/desktop/: imagej.desktop
apps/imagej/init.d/: 50-desktop-init.sh
apps/kstars/: Dockerfile  Makefile  README.md  debian-buster-upgrade.sh  kstars.sh  kstars.yml
apps/kstars/desktop/: ds9.desktop  kstars.desktop
apps/kstars/init.d/: 50-desktop-init.sh
apps/napari/: Dockerfile  Jenkinsfile  Makefile
apps/napari/init.d/: 50-desktop-init.sh
apps/ohdsi/: ohdsi.sh  ohdsi.yml
apps/pgadmin/: Docker.pgadmin-cloudtop  README.md  pgadmin-cloudtop.sh
apps/scout/: README.md  conda.sh  scout.sh  scout.yml
apps/verdi/: Dockerfile  Jenkinsfile  Makefile
apps/verdi/desktop/: verdi.desktop
example/gnu-octave/: Docker.gnu-octave  gnu-octave.sh  gnu-octave.yml
example/imagej/: imagej.sh  imagej.yml
example/napari/: napari.sh  napari.yml  python.sh
example/verdi/: Docker.verdi  verdi.sh  verdi.yml
src/cloudtop_sdk/: cli.py
tests/unit/: test_green.py
(+1 files in other folders)
