[metadata]
name = cloudtop-sdk
version = attr: cloudtop_sdk._version.__version__
author = Renaissance Computing Institute
author_email = schreepc@renci.org
description = Dockerfile Generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/helxplatform/CloudTopSDK
project_urls =
    Bug Tracker = https://github.com/helxplatform/CloudTopSDK/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = true
install_requires =
    PyYaml~=6.0

[options.entry_points]
console_scripts =
    ctbuild = cloudtop_sdk.cli:ctbuild

[options.packages.find]
where = src
